Fixed: no scrolling on small screens

--- a/public/style.css
+++ b/public/style.css
@@ -425,10 +425,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 body {
   height: 100%;
-  overflow: hidden;
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px) {
+  body {
+    overflow: hidden;
+  }
 }
 
 *, ::before, ::after {
